--- a/pom.xml
+++ b/pom.xml
@@ -19,6 +19,10 @@
           <version>3.0.2</version>
         </plugin>
         <plugin>
+          <artifactId>maven-package-plugin</artifactId>
+          <version>3.0.2</version>
+        </plugin>
+        <plugin>
           <artifactId>maven-compiler-plugin</artifactId>
           <version>3.8.0</version>
         </plugin>
