--- a/pom.xml
+++ b/pom.xml
@@ -51,6 +51,15 @@
           <artifactId>maven-project-info-reports-plugin</artifactId>
           <version>3.0.0</version>
         </plugin>
+        <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-war-plugin</artifactId>
+        <version>3.3.0</version>
+        <configuration>
+          <!--<webappDirectory>/sample/servlet/container/deploy/directory</webappDirectory>-->
+          <failOnMissingWebXml>false</failOnMissingWebXml>
+        </configuration>
+      </plugin>
         
       </plugins>
     </pluginManagement>
