--- a/pom.xml
+++ b/pom.xml
@@ -5,9 +5,35 @@
   <version>0.0.1-SNAPSHOT</version>
   <packaging>war</packaging>
   
+  <distributionManagement>
+    <snapshotRepository>
+      <id>nexus01</id>
+      <url>http://localhost:8081/repository/repo2/</url>
+    </snapshotRepository>
+  </distributionManagement>
+  
     <build>
     <pluginManagement><!-- lock down plugins versions to avoid using Maven defaults (may be moved to parent pom) -->
       <plugins>
+        <plugin>
+      <groupId>org.sonatype.plugins</groupId>
+      <artifactId>nexus-staging-maven-plugin</artifactId>
+      <version>1.5.1</version>
+      <executions>
+        <execution>
+          <id>default-deploy</id>
+          <phase>deploy</phase>
+          <goals>
+             <goal>deploy</goal>
+          </goals>
+        </execution>
+      </executions>
+      <configuration>
+        <serverId>nexus01</serverId>
+        <nexusUrl>http://localhost:8081/</nexusUrl>
+        <skipStaging>true</skipStaging>
+      </configuration>
+    </plugin>
         <!-- clean lifecycle, see https://maven.apache.org/ref/current/maven-core/lifecycles.html#clean_Lifecycle -->
         <plugin>
           <artifactId>maven-clean-plugin</artifactId>
