--- a/pom.xml
+++ b/pom.xml
@@ -21,6 +21,14 @@
                 <version>3.4.0.905</version>
             </plugin>
         <plugin>
+        <groupId>org.apache.tomcat.maven</groupId>
+        <artifactId>tomcat7-maven-plugin</artifactId>
+        <version>2.3-SNAPSHOT</version>
+        <configuration>
+          <url>http://localhost:9090</url>
+        </configuration>
+      </plugin>
+        <plugin>
       <groupId>org.sonatype.plugins</groupId>
       <artifactId>nexus-staging-maven-plugin</artifactId>
       <version>1.5.1</version>
