--- a/pom.xml
+++ b/pom.xml
@@ -21,13 +21,15 @@
                 <version>3.4.0.905</version>
             </plugin>
         <plugin>
-        <groupId>org.apache.tomcat.maven</groupId>
-        <artifactId>tomcat7-maven-plugin</artifactId>
-        <version>2.3-SNAPSHOT</version>
-        <configuration>
-          <url>http://localhost:9090</url>
-        </configuration>
-      </plugin>
+	<groupId>org.apache.tomcat.maven</groupId>
+	<artifactId>tomcat9-maven-plugin</artifactId>
+	<version>2.2</version>
+	<configuration>
+		<url>http://localhost:9090/manager/text</url>
+		<server>tomcat01</server>
+		<!--<path>/mkyongWebApp</path>-->
+	</configuration>
+</plugin>
         <plugin>
       <groupId>org.sonatype.plugins</groupId>
       <artifactId>nexus-staging-maven-plugin</artifactId>
